k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-dashboard
  namespace: health
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: health.ingress.realmclick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-dashboard
                port:
                  number: 80
  tls:
    - hosts:
        - health.ingress.realmclick.com
      secretName: health-dashboard-tls
